@@ -1,3 +1,7 @@
+2012-10-20  Simson Garfinkel  <simsong@air2.local>
+
+	* src/tcpdemux.h (class tcpdemux): process_tcp, process_ip, process_ip4 and process_ip6 now take const struct timeval &ts instead of const struct timeval *ts as their first argument, becuase ts should never be NULL.
+
 2012-09-16  Simson Garfinkel  <simsong@Mucha.local>
 
 	* src/flow.cpp (flow::filename): TM_FORMAT is now "%Y-%m-%dT%H:%M:%SZ"
